--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 beautifulsoup4==4.6.0
+blinker==1.4
 bs4==0.0.1
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 Flask==0.12.2
+Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.2
+google-api-python-client==1.6.4
+httplib2==0.10.3
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
+oauth2client==4.1.2
 psycopg2==2.7.3.1
+pyasn1==0.3.6
+pyasn1-modules==0.1.4
 requests==2.18.4
+rsa==3.4.2
+six==1.11.0
 SQLAlchemy==1.1.14
+uritemplate==3.0.0
 urllib3==1.22
 Werkzeug==0.12.2
