--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "test": "jest"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "jest": "^21.2.1",
-    "react-addons-test-utils": "^16.0.0"
+    "react-addons-test-utils": "^16.0.0",
+    "react-test-renderer": "^16.0.0"
   },
   "dependencies": {
     "react": "^16.0.0",
