--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.23.0
+bcrypt==3.1.4
 beautifulsoup4==4.6.0
 blinker==1.4
 bs4==0.0.1
@@ -24,10 +25,12 @@ Jinja2==2.9.6
 MarkupSafe==1.0
 oauth2client==4.1.2
 psycopg2==2.7.3.1
+py==1.4.34
 pyasn1==0.3.6
 pyasn1-modules==0.1.4
 pycparser==2.18
 pyOpenSSL==17.3.0
+pytest==3.2.3
 python-dateutil==2.6.1
 requests==2.18.4
 rsa==3.4.2
