--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,6 @@
 server {
-  listen 80 default_server;
+  listen 80;
+  # listen 443 default_server;
+  server_name natural20.sarahjaneiom.com;
   location / { proxy_pass http://127.0.0.1:5000; }
 }
