--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ pycparser==2.18
 pyOpenSSL==17.3.0
 pytest==3.2.3
 python-dateutil==2.6.1
+pytz==2017.3
 requests==2.18.4
 rsa==3.4.2
 selenium==3.6.0
